# curs_work_7

./: .env  .env.sample  Dockerfile  README.md  habits_data.json  pyproject.toml  users_data.json
config/: flace8.cfg  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  custom_docstring.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
